Fixed container min-height to avoid white spaces y layout

--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -13,6 +13,7 @@ html, body {
   background-color: #f9f9f9;
   margin-left: 50px;
   overflow-y: scroll;
+  min-height: 100%;
 }
 
 .noscroll {
@@ -76,8 +77,18 @@ html, body {
   width: 150px;
 }
 
+#socialtic {
+  margin-bottom: 0px;
+}
+
 #socialtic img {
   width: 250px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+#ilda img {
+  width: 200px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
